--- a/dos33.html
+++ b/dos33.html
@@ -1380,14 +1380,14 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
                     184             STA $<span class='n'>3D0</span>,X                                      ; <a class='magic' name='_'>magic number</a>
                     185             DEX
                     186             BPL INITE
-                    187             LDA DBVECT+2    ;SET RESET VECTORS FOR NEW MONITOR.
-                    188             STA ZRSET+1     ;NOTE: THESE ARE NOT NORMALLY USED AND
-                    189             EOR #$<span class='n'>A5</span>        ; ARE ONLY SET ONCE ON BOOT     ; <a class='magic' name='_'>magic number</a> F800 Monitor Ctrl-Reset Powered Up Checksum
-                    190             STA PWCNST      ;POWER UP CONSTANT=COMPLIMENT OF HI RESET VECTOR.
-                    191             LDA DBVECT+1    ;SET LOW VECTOR ADDRESS.
-                    192             STA ZRSET       ;NOW APPLE RESET WILL KEEP DOS IN I/O LOOP
-                    193             LDA #<span class='n'>6</span>          ;INIDICATE RUN                  ; <a class='magic' name='_'>magic number</a> <span class='todo'>TODO</span> 
-                    194             BNE INITF1      ;LOAD AND RUN THE 'HELLO' PROGRAM   ; &darr; (always) 
+1E30:AD 53 1E       <a class='line' name='DOSINIT.187'>187</a>             LDA DBVECT+<span class='n'>2</span>    ;SET RESET VECTORS FOR NEW MONITOR.                 ;[.. <a class='mem' name='_1E30'>wastes</a> 17 bytes! WTF is the point of using a table
+1E33:8D F3 03       188             STA ZRSET+<span class='n'>1</span>     ;NOTE: THESE ARE NOT NORMALLY USED AND              ; .. if you're just going to ignore part of it???
+1E36:49 A5          189             EOR #$<span class='n'>A5</span>        ; ARE ONLY SET ONCE ON BOOT                         ; .. <a class='magic' name='_'>magic number</a> F800 Monitor Ctrl-Reset Powered Up Checksum
+1E38:8D F4 03       190             STA PWCNST      ;POWER UP CONSTANT=COMPLIMENT OF HI RESET VECTOR.   ; .. This entire clusterfrak is caused by Line #<a class='line' href='DOSINIT.221'>221</a>
+1E3B:AD 52 1E       191             LDA DBVECT+<span class='n'>1</span>    ;SET LOW VECTOR ADDRESS.                            ; ..
+1E3E:8D F2 03       192             STA ZRSET       ;NOW APPLE RESET WILL KEEP DOS IN I/O LOOP          ; ..]
+                    193             LDA #<span class='n'>6</span>          ;INIDICATE RUN                                      ; <a class='magic' name='_'>magic number</a> <span class='todo'>TODO</span> 
+                    194             BNE INITF1      ;LOAD AND RUN THE 'HELLO' PROGRAM                   ; &darr; (always) 
                     195 ;
                     196 <a class='f' name='INITF'    >INITF       </a>EQU *
                     197             LDA SVCMD
@@ -1414,7 +1414,7 @@ Addr:## ## ##       L## LABEL       MNEMONIC        COMMENT                     
 1E6E:EA             218             NOP
 1E6F:EA             219             NOP
 1E70:4C 59 FA       220             JMP <a class='e' href='#MONBRK'>MONBRK</a>                                      ; $3EF
-1E73:4C 65 FF       221             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F2 Control-Reset JMP $9DBF
+1E73:4C 65 FF       <a class='line' name='DOSINIT.221'>221</a>             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F2 Control-Reset $BF,$9D,$38; Why isn't this <span class='code'>DW DBRST</span>, <span class='code'>DB $#&gt;DBRST ^ $A5</span> ??? See Line <a class='line' href='#DOSINIT.187'>187</a> wastage
 1E76:4C 58 FF       222             JMP <a class='e' href='#IORTS' >IORTS</a>                                       ; $3F5: JMP $FF58
 1E79:4C 65 FF       223             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3F8: JMP $FF65
 1E7C:4C 65 FF       224             JMP <a class='e' href='#MONRST'>MONRST</a>                                      ; $3FB: JMP $FF65
